[package]
name = "fmu"
version = "0.1.0"
authors = ["Bjorn Lu"]
edition = "2021"
description = "Fast module utilities"
repository = "https://github.com/bluwy/fmu"
license = "MIT"
keywords = ["javascript", "module"]
categories = ["web-programming"]
include = ["/src"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
wasm-bindgen= "0.2.81"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
